Update to server 1.0.0
